--- a/app/src/main/res/layout/fragment_verification.xml
+++ b/app/src/main/res/layout/fragment_verification.xml
@@ -78,96 +78,104 @@
 
             <!-- Verification Code Input -->
             <LinearLayout
-                android:id="@+id/code_input_container"
+                android:id="@+id/verification_code_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center"
+                android:orientation="vertical"
                 android:layout_below="@id/email_input"
                 android:layout_marginBottom="24dp">
+                
+                <LinearLayout
+                    android:id="@+id/code_input_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center">
 
-                <EditText
-                    android:id="@+id/digit1"
-                    android:layout_width="48dp"
-                    android:layout_height="60dp"
-                    android:gravity="center"
-                    android:inputType="number"
-                    android:maxLength="1"
-                    android:textSize="24sp"
-                    android:fontFamily="@font/urbanist_semibold"
-                    android:background="@drawable/rounded_edittext_background"
-                    android:layout_marginEnd="4dp"
-                    android:elevation="4dp"
-                    android:importantForAutofill="no" />
+                    <EditText
+                        android:id="@+id/digit1"
+                        android:layout_width="48dp"
+                        android:layout_height="60dp"
+                        android:gravity="center"
+                        android:inputType="number"
+                        android:maxLength="1"
+                        android:textSize="24sp"
+                        android:fontFamily="@font/urbanist_semibold"
+                        android:background="@drawable/rounded_edittext_background"
+                        android:layout_marginEnd="4dp"
+                        android:elevation="4dp"
+                        android:importantForAutofill="no" />
 
-                <EditText
-                    android:id="@+id/digit2"
-                    android:layout_width="48dp"
-                    android:layout_height="60dp"
-                    android:gravity="center"
-                    android:inputType="number"
-                    android:maxLength="1"
-                    android:textSize="24sp"
-                    android:fontFamily="@font/urbanist_semibold"
-                    android:background="@drawable/rounded_edittext_background"
-                    android:layout_marginEnd="4dp"
-                    android:elevation="4dp"
-                    android:importantForAutofill="no" />
+                    <EditText
+                        android:id="@+id/digit2"
+                        android:layout_width="48dp"
+                        android:layout_height="60dp"
+                        android:gravity="center"
+                        android:inputType="number"
+                        android:maxLength="1"
+                        android:textSize="24sp"
+                        android:fontFamily="@font/urbanist_semibold"
+                        android:background="@drawable/rounded_edittext_background"
+                        android:layout_marginEnd="4dp"
+                        android:elevation="4dp"
+                        android:importantForAutofill="no" />
 
-                <EditText
-                    android:id="@+id/digit3"
-                    android:layout_width="48dp"
-                    android:layout_height="60dp"
-                    android:gravity="center"
-                    android:inputType="number"
-                    android:maxLength="1"
-                    android:textSize="24sp"
-                    android:fontFamily="@font/urbanist_semibold"
-                    android:background="@drawable/rounded_edittext_background"
-                    android:layout_marginEnd="4dp"
-                    android:elevation="4dp"
-                    android:importantForAutofill="no" />
+                    <EditText
+                        android:id="@+id/digit3"
+                        android:layout_width="48dp"
+                        android:layout_height="60dp"
+                        android:gravity="center"
+                        android:inputType="number"
+                        android:maxLength="1"
+                        android:textSize="24sp"
+                        android:fontFamily="@font/urbanist_semibold"
+                        android:background="@drawable/rounded_edittext_background"
+                        android:layout_marginEnd="4dp"
+                        android:elevation="4dp"
+                        android:importantForAutofill="no" />
 
-                <EditText
-                    android:id="@+id/digit4"
-                    android:layout_width="48dp"
-                    android:layout_height="60dp"
-                    android:gravity="center"
-                    android:inputType="number"
-                    android:maxLength="1"
-                    android:textSize="24sp"
-                    android:fontFamily="@font/urbanist_semibold"
-                    android:background="@drawable/rounded_edittext_background"
-                    android:layout_marginEnd="4dp"
-                    android:elevation="4dp"
-                    android:importantForAutofill="no" />
+                    <EditText
+                        android:id="@+id/digit4"
+                        android:layout_width="48dp"
+                        android:layout_height="60dp"
+                        android:gravity="center"
+                        android:inputType="number"
+                        android:maxLength="1"
+                        android:textSize="24sp"
+                        android:fontFamily="@font/urbanist_semibold"
+                        android:background="@drawable/rounded_edittext_background"
+                        android:layout_marginEnd="4dp"
+                        android:elevation="4dp"
+                        android:importantForAutofill="no" />
 
-                <EditText
-                    android:id="@+id/digit5"
-                    android:layout_width="48dp"
-                    android:layout_height="60dp"
-                    android:gravity="center"
-                    android:inputType="number"
-                    android:maxLength="1"
-                    android:textSize="24sp"
-                    android:fontFamily="@font/urbanist_semibold"
-                    android:background="@drawable/rounded_edittext_background"
-                    android:layout_marginEnd="4dp"
-                    android:elevation="4dp"
-                    android:importantForAutofill="no" />
+                    <EditText
+                        android:id="@+id/digit5"
+                        android:layout_width="48dp"
+                        android:layout_height="60dp"
+                        android:gravity="center"
+                        android:inputType="number"
+                        android:maxLength="1"
+                        android:textSize="24sp"
+                        android:fontFamily="@font/urbanist_semibold"
+                        android:background="@drawable/rounded_edittext_background"
+                        android:layout_marginEnd="4dp"
+                        android:elevation="4dp"
+                        android:importantForAutofill="no" />
 
-                <EditText
-                    android:id="@+id/digit6"
-                    android:layout_width="48dp"
-                    android:layout_height="60dp"
-                    android:gravity="center"
-                    android:inputType="number"
-                    android:maxLength="1"
-                    android:textSize="24sp"
-                    android:fontFamily="@font/urbanist_semibold"
-                    android:background="@drawable/rounded_edittext_background"
-                    android:elevation="4dp"
-                    android:importantForAutofill="no" />
+                    <EditText
+                        android:id="@+id/digit6"
+                        android:layout_width="48dp"
+                        android:layout_height="60dp"
+                        android:gravity="center"
+                        android:inputType="number"
+                        android:maxLength="1"
+                        android:textSize="24sp"
+                        android:fontFamily="@font/urbanist_semibold"
+                        android:background="@drawable/rounded_edittext_background"
+                        android:elevation="4dp"
+                        android:importantForAutofill="no" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -176,7 +184,7 @@
                 android:id="@+id/progressIndicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/code_input_container"
+                android:layout_below="@id/verification_code_container"
                 android:layout_centerHorizontal="true"
                 android:visibility="gone"
                 android:indeterminate="true"
@@ -199,7 +207,7 @@
                 android:elevation="4dp"
                 android:translationZ="4dp"
                 android:textSize="24sp"
-                android:layout_below="@id/code_input_container"
+                android:layout_below="@id/verification_code_container"
                 android:layout_marginTop="24dp"
                 android:gravity="center" />
 
